# Solver_Rubiks_Cube

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
Solver/PatternDatabases/: NibbleArray.cpp  NibbleArray.h
